compiler/tests/fail/typing/x86-64/write_constant_pointer_direct_var.jazz
export
fn main() -> reg u64{
  reg u64 a;
  stack u64[1] s;
  reg const ptr u64[1] p;
  s[0] = 42;
  p = s;
  a = s[0];
  return a;
}
